kube/Test.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-artifactory
spec:
  containers:
    - name: curl
      image: curlimages/curl
      command: ["sleep", "3600"]
  imagePullSecrets:
    - name: artifactory-secret
  restartPolicy: Never
