kube/am-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  ports:
    - port: 9093
      targetPort: 9093
  selector:
    app: alertmanager
