kube/cadsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: cadvisor
  namespace: kube-system
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: cadvisor
