kube/prom-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
  - port : 9000
    targetPort: 12000
    nodePort: 31999
    protocol: TCP
